# simple_cpp

./: .clang-format  .clang-tidy  CMakeLists.txt  main.cpp
include/: simple.h
src/: simple.cpp
